--- a/config/website/static/navbar.css
+++ b/config/website/static/navbar.css
@@ -25,18 +25,18 @@
     list-style: none;
 }
 
-.nav-links li {
-    display: inline-block;
-    padding: 0px 10px 0px 10px;
+.nav-list {
+    display: inline-block !important;
+    padding: 0px 10px 0px 10px !important;
 }
 
-.nav-links a {
+.nav-item {
     font-size: 0.75rem;
     letter-spacing: 3px;
     text-decoration: none;
 }
 
-nav ul li a:hover {
+.nav-item:hover {
     color: #e84728;
 }
 
@@ -81,13 +81,13 @@ nav ul li a:hover {
     }
 
     .nav-links {
-        position: fixed;
-        right: 0;
-        height: 120vh;
-        top: -20px;
-        background-color: rgba(12, 23, 44, 0.7);
         display: flex;
         flex-direction: column;
+        position: fixed;
+        right: 0;
+        height: 150vh;
+        top: -20px;
+        background-color: rgba(12, 23, 44, 0.7);
         align-items: center;
         width: 250px;
         transform: translateX(100%);
@@ -96,7 +96,7 @@ nav ul li a:hover {
         backdrop-filter: blur(15px);
     }
 
-    .nav-links li {
+    .nav-links .nav-list {
         opacity: 0;
         margin-right: auto;
         padding: 10px;
@@ -107,7 +107,7 @@ nav ul li a:hover {
         cursor: pointer;
     }
 
-    .burger div {
+    .burger-line {
         width: 25px;
         height: 3px;
         background-color: white;
@@ -132,18 +132,19 @@ nav ul li a:hover {
         }
     }
 
-    .nav-links li {
+    .nav-links .nav-list {
         animation: navLinkFade 0.5s ease forwards 0.5s;
     }
 
-    a.nav-item {
+    .nav-item {
         font-size: 1.5rem;
+        line-height: 40px;
     }
 }
 
 @media screen and (max-width: 768px) {
 
-    a.nav-item {
+    .nav-item {
         font-size: 3.0rem;
     }
 }
